# icapy

./: LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/: python-package.yaml
.github/workflows/: python-package.yaml
icapy/: cli.py  config.py  data.py  jobs.py  projects.py
